# mcpm.sh

./: .gitmodules  CLAUDE.md  README.md  SETUP.md  package-lock.json  package.json  pyproject.toml
_docs/: skills-usage-guide.md
_docs/specs/done/: mcpm-gateway-daemon.md
_docs/specs/in_progress/: skill-asset-scripts-dir.md  skill-lifecycle-hooks.md
_docs/specs/open/: claude-code-plugins.md  claude-desktop-skills.md  skills-sync.md  user-level-skills-sync.md
examples/skills-repo/: mcpm-skills.yaml
examples/skills-repo/agents/code-reviewer/: AGENT.md
examples/skills-repo/profiles/: development.yaml
plugins/mcpm-compression/: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
plugins/mcpm-compression/src/mcpm_compression/: __init__.py  cli.py  config.py  mcp_presence.py  paths.py  provider.py  schema.py  sync.py
plugins/mcpm-compression/src/mcpm_compression/providers/: __init__.py  headroom.py  headroom_runtime.py  none.py  rtk.py
plugins/mcpm-compression/src/mcpm_compression/runtime/: __init__.py  launchd.py  shell.py
plugins/mcpm-compression/tests/: test_apply.py  test_presets.py  test_providers.py  test_run.py  test_update.py
plugins/mcpm-compression/tests/fixtures/: agent_savings_agent-90.json  agent_savings_balanced.json  health_contract.json
scripts/: sync-upstream.sh
src/mcpm/: cli.py
src/mcpm/cc/: __init__.py  claude_cli.py  state.py  updater.py
src/mcpm/clients/: base.py
src/mcpm/commands/: bridge.py  client.py  gateway.py  install.py  mode.py  uninstall.py  update.py
src/mcpm/core/: schema.py  source.py  updater.py
src/mcpm/router/: __init__.py  app.py  auth.py  proxy.py  runtime.py  server_main.py  supervisor.py
src/mcpm/skills/: __init__.py  analytics.py  audit.py  bundle.py  collisions.py  config.py  lint.py  parser.py  registry.py  router.py  schema.py  sync_git.py  taps.py  transpiler.py
src/mcpm/styles/: __init__.py  lint.py  parser.py  schema.py  transpiler.py
src/mcpm/utils/: git.py  github_release.py
src/mcpm/worker/: __init__.py  main.py  shim.py
tests/: test_client.py  test_github_release.py
tests/test_agents/: conftest.py  test_commands.py  test_lint.py  test_parser.py  test_schema.py  test_transpilers.py
tests/test_cc/: test_state.py  test_updater.py
tests/test_clients/: test_proxy_mode.py  test_windsurf.py
tests/test_router/: test_auth.py  test_bridge.py  test_integration.py  test_phase4_commands.py  test_runtime.py
tests/test_skills/: conftest.py  test_analytics.py  test_asset_copy.py  test_audit.py  test_bundle.py  test_collisions.py  test_commands.py  test_config.py  test_git_sync.py  test_hooks.py  test_lint.py  test_parser.py  test_registry.py  test_router.py  test_schema.py  test_taps.py  test_transpilers.py  test_transpilers_phase2.py
tests/test_styles/: conftest.py  test_diff.py  test_lint.py  test_parser.py  test_schema.py  test_stress.py  test_sync.py  test_transpilers.py
tests/test_worker/: test_shim.py
(+94 files in other folders)
