[project]
name = "mcpm-compression"
version = "0.4.0"
description = "Swappable context-compression provider plugin for mcpm (headroom, rtk-only, none)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]
# Note: `mcpm` itself is intentionally NOT a dependency. This plugin is loaded
# via the `mcpm.plugins` entry point INTO mcpm's own environment, so mcpm and
# its core APIs (GlobalConfigManager, STDIOServerConfig) are already importable.

[project.entry-points."mcpm.plugins"]
compression = "mcpm_compression.cli:compression"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcpm_compression"]

[tool.ruff]
line-length = 120
target-version = "py310"
